fix issues in vaulting api & new test for listing api

--- a/marketplace/package.json
+++ b/marketplace/package.json
@@ -10,15 +10,15 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "export runtime=dev NO_COLOR=logging; nest start --watch",
-    "start:devnowatch": "export runtime=dev NO_COLOR=logging; nest start",
-    "start:awsdev": "export runtime=awsdev NO_COLOR=logging; nest start --watch",
-    "start:stage": "export runtime=stage NO_COLOR=logging; nest start --watch",
-    "start:prod": "export runtime=prod NO_COLOR=logging; nest start --watch",
+    "start:dev": "export MARKETPLACE_RUNTIME=dev NO_COLOR=logging; nest start --watch",
+    "start:devnowatch": "export MARKETPLACE_RUNTIME=dev NO_COLOR=logging; nest start",
+    "start:awsdev": "export MARKETPLACE_RUNTIME=awsdev NO_COLOR=logging; nest start --watch",
+    "start:stage": "export MARKETPLACE_RUNTIME=stage NO_COLOR=logging; nest start --watch",
+    "start:prod": "export MARKETPLACE_RUNTIME=prod NO_COLOR=logging; nest start --watch",
     "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "export runtime=dev; jest --watch",
+    "test": "export MARKETPLACE_RUNTIME=test; jest",
+    "test:watch": "export MARKETPLACE_RUNTIME=dev; jest --watch",
     "test:cov": "export runtime=dev; jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
