--- a/marketplace/package.json
+++ b/marketplace/package.json
@@ -37,6 +37,7 @@
     "amazon-cognito-identity-js": "5.2.9",
     "aws-sdk": "2.1160.0",
     "bull": "4.7.0",
+    "cache-manager": "^4.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "defender-relay-client": "1.20.0",
@@ -62,6 +63,7 @@
     "@nestjs/schematics": "8.0.11",
     "@nestjs/testing": "8.0.0",
     "@types/bull": "3.15.8",
+    "@types/cache-manager": "^4.0.1",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.0.0",
