--- a/docker/marketplace.api.docker.compose.yaml
+++ b/docker/marketplace.api.docker.compose.yaml
@@ -1,6 +1,7 @@
 version: "3.2"
 services:
   blockchain:
+    container_name: marketplace_api
     image: marketplace-api:1.0.0
     ports:
       - "3300:3300"
