--- a/.github/workflows/build_upload_ecr.yml
+++ b/.github/workflows/build_upload_ecr.yml
@@ -39,5 +39,5 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
       run: |
-        docker build -t $ECR_REGISTRY/${{ inputs.AWS_REGION }}:${{ inputs.IMAGE_TAG }} -f marketplace.api.dockerfile docker/
-        docker push $ECR_REGISTRY/${{ inputs.AWS_REGION }}:${{ inputs.IMAGE_TAG }}
+        docker build -t $ECR_REGISTRY/${{ inputs.ECR_REPOSITORY }}:${{ inputs.IMAGE_TAG }} -f marketplace.api.dockerfile docker/
+        docker push $ECR_REGISTRY/${{ inputs.ECR_REPOSITORY }}:${{ inputs.IMAGE_TAG }}
