--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -3,13 +3,13 @@ name: Build & Upload [DEV]
 on:
   push:
     branches:
-      - development-test
+      - development
     
 jobs:
   deploy:
     name: Build & Upload
     
-    uses: beckett-media/vulcan-marketplace-api/.github/workflows/build_upload_ecr.yml@development-test
+    uses: beckett-media/vulcan-marketplace-api/.github/workflows/build_upload_ecr.yml@development
     with:
       ECR_REPOSITORY: dev-vulcan-marketplace-api
       IMAGE_TAG: ${{ github.sha }}
