--- a/.github/workflows/dev-deployment.yml
+++ b/.github/workflows/dev-deployment.yml
@@ -7,11 +7,12 @@ on:
     
 jobs:
   deploy:
-    name: Build & Upload
+    name: DEV
     
     uses: beckett-media/vulcan-marketplace-api/.github/workflows/cont-deployment-base.yml@development
     with:
       ECS_CLUSTER: dev-vulcan-marketplace-api-cluster
+      ECS_TASK: dev-vulcan-marketplace-api-task
       ECS_SERVICE: dev-vulcan-marketplace-api-service
       ECR_REPOSITORY: dev-vulcan-marketplace-api
       IMAGE_TAG: ${{ github.sha }}
