--- a/.github/workflows/cont-deployment-base.yml
+++ b/.github/workflows/cont-deployment-base.yml
@@ -13,6 +13,9 @@ on:
       ECS_CLUSTER:
         required: true
         type: string
+      CONTAINER_NAME:
+        required: true
+        type: string
       IMAGE_TAG:
         required: true
         type: string
@@ -71,7 +74,7 @@ jobs:
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: task-definition.json
-        container-name: application
+        container-name: ${{ inputs.CONTAINER_NAME }}
         image: ${{ steps.build-image.outputs.image }}
     
     - name: Deploy Amazon ECS task definition
