--- a/.github/workflows/cont-deployment-base.yml
+++ b/.github/workflows/cont-deployment-base.yml
@@ -24,6 +24,8 @@ on:
         required: true
       AWS_SECRET_ACCESS_KEY:
         required: true
+      ENVIRONMENT_VARIABLES:
+        required: true
 
 jobs:
 
@@ -69,13 +71,14 @@ jobs:
       run: |
         aws ecs describe-task-definition --task-definition ${{ inputs.ECS_TASK }} --query taskDefinition > task-definition.json
     
-    - name: Fill in the new image ID in the Amazon ECS task definition
+    - name: Update Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: task-definition.json
         container-name: ${{ inputs.CONTAINER_NAME }}
         image: ${{ steps.build-image.outputs.image }}
+        environment-variables: ${{ secrets.ENVIRONMENT_VARIABLES }}
     
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
