chore(devops): test new tf

--- a/.github/workflows/cont-deployment-base.yml
+++ b/.github/workflows/cont-deployment-base.yml
@@ -84,7 +84,7 @@ jobs:
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: task-definition.json
+        task-definition: tf.json
         container-name: ${{ inputs.CONTAINER_NAME }}
         image: ${{ steps.build-image.outputs.image }}
         environment-variables: ${{ secrets.ENVIRONMENT_VARIABLES }}
