--- a/.github/workflows/cont-deployment-base.yml
+++ b/.github/workflows/cont-deployment-base.yml
@@ -27,6 +27,8 @@ on:
         required: true
       AWS_SECRET_ACCESS_KEY:
         required: true
+      ENVIRONMENT_VARIABLES:
+        required: true
       
 
 jobs:
