--- a/.github/workflows/qa-deployment.yml
+++ b/.github/workflows/qa-deployment.yml
@@ -17,5 +17,7 @@ jobs:
       ECR_REPOSITORY: qa-vulcan-marketplace-api
       CONTAINER_NAME: qa-marketplace-api
       IMAGE_TAG: ${{ github.sha }}
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       ENVIRONMENT_VARIABLES: ${{ secrets.QA_ENVIRONMENT_VARIABLES }}
-    secrets: inherit
